<resources>
    <string name="app_name">Insulin_app</string>
    <string name="status_prompt" />
    <string name="height_label">Зріст (см)</string>
    <string name="user_data">Введіть дані пацієнта:</string>
    <string name="weight_label">Вага (кг)</string>
    <string name="age_label">Вік</string>
    <string name="calculate_dose">Розрахувати дозу</string>
    <string name="radio2">Більше року(добра компресія)</string>
    <string name="radio1">Вперше виявленний цукровий діабет</string>
    <string name="radio3">Більше року (нестійка компресія)</string>
    <string name="radio4">Декомпенсація</string>
    <string name="radio5">Кетоацидоз</string>
    <string name="radio6">3й триместр вагітності.</string>
    <string name="new_page">Календар</string>
    <string name="first_text">Розрахунок компенсаційних доз інсуліна</string>
    <string name="first2_text">Дипломна робота</string>
    <string name="first_text3">Увійдіть або зареєстуйтесь</string>
    <string name="login">Вхід</string>
    <string name="signup">Реєстрація</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="firstname">First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Last_name">Last Name</string>
</resources>