<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/first_name"
            android:ems="20"
            android:padding="20dp"
            android:hint="@string/firstname"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/last_name"
            android:ems="20"
            android:padding="20dp"
            android:hint="@string/Last_name"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/enter_email"
            android:ems="20"
            android:padding="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:contentDescription="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:padding="20dp"
            android:inputType="textPassword"
            android:hint="@string/Password"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C2185B"
            android:text="Зареєструватися" />

    </LinearLayout>

</androidx.cardview.widget.CardView>